# Connect4

./: .gitignore  LAYOUT_MANAGER_INTEGRATION_GUIDE.md  NEXT_AGENT_TODO.md  agent.py  evaluator.py  mcts.py  my_mcts.py  play.py  pyproject.toml  run_train.py  train.yaml  trainer.py
agents/: agent.py
configs/match/: README.md  connect4_alphazero_vs_alphazero.yaml  connect4_alphazero_vs_random.yaml  connect4_random_vs_random.yaml  tictactoe_alphazero_vs_alphazero.yaml  tictactoe_alphazero_vs_random.yaml  tictactoe_random_vs_random.yaml
configs/play/: README.md  connect4_alphazero.yaml  connect4_random.yaml  tictactoe_alphazero.yaml  tictactoe_random.yaml
configs/train/: README.md  connect4_full.yaml  connect4_quick.yaml  mcgs_bob.yaml  mcts_bob.yaml  tictactoe_full.yaml  tictactoe_quick.yaml  tictactoe_vanilla_mcts_full.yaml  tictactoe_vanilla_mcts_quick.yaml
games/: connect4.py  game_play.py  tiktaktoe.py
games/ui/: __init__.py  connect4_ui.py  game_ui.py  tictactoe_ui.py
mcts/: alphazero_mcts.py
models/: tiktaktoenet.py
scripts/: human_play.py  human_play.yaml  play.py  play_vs_human.py  simulate_match.py  simulate_match.yaml  speed_test.py  speed_test.yaml  train.py  train.yaml  view_match.py  view_match.yaml
scripts/samples/: README.md  match_connect4_alphazero_vs_random.yaml  match_random_vs_random.yaml  (+14 more)
src/agents/: __init__.py  (+9 more)
tests/: FUTURE_TESTING_PLAN.md  __init__.py  conftest.py  demo_tictactoe_ui.py  test_algorithm_registry.py  test_connect4_ui.py  test_game_ui_base.py  test_tictactoe_ui.py  test_train_integration.py
training/: trainer.py
(+129 files in other folders)
